10_적은숫자의 법칙 table QNA 추가

--- a/01_ThinkingFastandSlow/10_적은숫자의법칙_민철.md
+++ b/01_ThinkingFastandSlow/10_적은숫자의법칙_민철.md
@@ -1,16 +1,32 @@
 # II. 휴리스틱과 편향
 
-Q. 통계적으로 사고하기 어려운 이유는 무엇인가?
+Q. | 통계적으로 사고하기 어려운 이유는 무엇인가?
+--- | ---
+A. | 우리의 직관적 사고는 어떻게든 원인을 찾으려고 하지만, 통계적 규칙성은 기존과 다른 접근법을 요구하기 때문이다.
+
+Q. | 통계적으로 사고하기 어렵다는 증거
+--- | ---
+A. | 우리는 우연의 산물을 보고도 원인을 찾으려 한다.
+
+Q. | 사건에 대한 직관적 사고 vs. 통계적 사고
+--- | ---
+사건 | 공포 영화를 관람하고 오면 교통사고를 목격한다.
+직관 | 교통사고 목격의 원인을 공통 패턴인 공포 영화 관람으로 생각하게 된다.
+통계 | 공포 영화 관람 이후 발생할 수 있는 일 중 "교통사고 목격과 그 외의 다른 사건들을 생각할 때, 교통사고 목격은 무작위적인 사건일 뿐이다.
+
+> 연상 기계는 원인을 찾는다. 통계적 시각은 당면한 사건이 일어나게 된 경위에 집중하기보다는 사건을 그것 대신에 일어날 수 있었던 일과 연결시킨다. (p.172)
 
 ## 10.	적은 숫자의 법칙
 
-### Introduction
+### ::: Introduction
 
 #### p.164 **#영감**
 
 > 시스템 1은 한 가지 형식의 사고에 매우 능하다. 자동적으로 힘들이지 않고 여러 사건 사이의 인과관계를 찾아낸다. 심지어 인과관계가 겉으로만 그럴 듯해도 말이다.
 
-▶ 시사경제스터디를 정리할 때도 이런 원리를 차용하면 좋을 듯하다. 예를 들어, "가계부채를 해결하기 어려운 이유는 무엇인가?"라는 질문에 대한 대답을 준비할 때 힘들이지 않고 직관적인 인과관계를 근거로 설명하면 매우 깔끔한 답변이 될 것이다. ▶ 면접을 준비할 때도 적용 가능하다. 너무 길거나 복잡한 설명은 면접에서 불리하기 때문이다. 간결한 설명으로 뚜렷한 인상을 주려면 힘들이지 않고 단번에 이해할 수 있도록 답변해야 한다.
+▶ 시사경제스터디를 정리할 때도 이런 원리를 차용하면 좋을 듯하다. 예를 들어, "가계부채를 해결하기 어려운 이유는 무엇인가?"라는 질문에 대한 대답을 준비할 때 힘들이지 않고 직관적인 인과관계를 근거로 설명하면 매우 깔끔한 답변이 될 것이다.
+
+▶ 면접을 준비할 때도 적용 가능하다. 너무 길거나 복잡한 설명은 면접에서 불리하기 때문이다. 간결한 설명으로 뚜렷한 인상을 주려면 힘들이지 않고 단번에 이해할 수 있도록 답변해야 한다.
 
 #### p.165 **#중요**
 
@@ -46,4 +62,64 @@ Q. 통계적으로 사고하기 어려운 이유는 무엇인가?
 
 ▶ 인구밀도가 낮다는 것에 어떤 느낌은 들었지만, 표본 추출의 우연성을 떠올리지는 못했다.
 
-### 적은 숫자의 법칙
+### ::: 적은 숫자의 법칙
+
+#### p.168 #궁금
+
+> 전통적으로 심리학자들은 표본의 크기를 결정하기 위해 계산하진 않는다. 그보다는 자신의 판단에 기대는데 그 판단이 잘못된 경우가 흔하다. (...) 나는 통계학을 가르치는 교수였고, 실패 위험을 적정 수준으로 낮추는 표본 크기 계산법을 알았기 때문에 실수가 더욱 황당하게 느껴졌다.
+
+▶ 실패 위험을 적정 수준으로 낮추는 표본 크기 계산법은 무엇인가?
+
+### ::: 의심을 이기는 확신 편향
+
+#### p.170 #중요
+
+> 설문조사에 대한 메시지에는 두 가지 종류의 정보가 들어 있다. 한 가지는 이야기에 관한 정보, 다른 한 가지는 이야기의 출처에 대한 정보이다.
+
+▶ 다음 설문조사를 보고 세 단어로 요약해보라.
+
+> 노인 300명을 대상으로 실시한 전화 조사에서 응답자의 60%가 대통령을 지지하는 것으로 나타났다.
+
+▶ 아마 이렇게 할 것이다.
+
+> "노인들은 대통령을 지지한다."
+
+▶ 표본 크기가 달랐더라도 당신은 똑같이 요약했을 것이다.
+
+> 전문가가 아니라면 표본 크기가 150명이건 3,000명이건 상관없이 이런 표 본 차이에 따라 상이한 반응을 보일 가능성은 낮다. 이것이 바로 **"사람들은 표본 크기에 충분히 민감하지않다"** 라는 말의 의미이다.
+
+### ::: 원인과 운
+
+#### p.172 통계적 사고란 무엇인가 [중요]
+
+> 통계적 시각은 당면한 사건이 일어나게 된 원인에 집중하기보다는 사건을 그것 대신에 일어날 수 있었던 일과 연결시킨다. 다시 말해 특별한 어떤 것이 사건을 지금처럼 만들었다기보다는 운 때문에 많은 대안적 사건들 중 하필 그 일이 발생했다는 것이다.
+
+#### p.172~175 인과관계를 따지는 연상 기계가 심각한 잘못을 일으키는 경우는 언제인가? [중요]
+
+> 진짜 무작위적인 사건의 무작위성을 평가할 때 심각한 잘못을 일으킨다. 예를 들어 한 집안에서 남자아이와 여자아이가 번갈아 태어나지 않고 여아들만 6명 연속으로 태어났다고 해보자. 우리는 이를 우연이라기보다는 기계적인 인과성 내지는 누군가의 의도로 인한 결과처럼 판단한다.
+
+▶ 우리는 뭔가 규칙적인 패턴으로 보이는 것을 감지하면 이 과정이 랜덤이라는 생각을 재빠르게 거부한다. 우연을 우연이라고 받아들이지 못하는 것이다.
+
+> 한 중대는 4대의 비행기를 잃은 반면 다른 중대는 전혀 피해를 입지 않았다. 그러나 한 중대가 다른 중대보다 효과적인 작전을 수행했다고 볼 만한 이유는 존재하지 않았고, 두 중대 사이에 작전 내용상의 차이도 없었다. 나는 운이 차이를 만든 가장 개연성 있는 답이며, 불분명한 원인을 무작위로 찾으려는 시도는 무의미하고, 피해를 입은 중대의 조종사들이 자신과 숨진 동료들이 잘못했다는 죄책감을 갖고 더 큰 심리적인 부담을 느끼게 해서는 안 된다는 논리를 폈다.
+
+▶ 랜덤을 랜덤이라고 받아들이지 못한다면, 원인을 억지로라도 찾아내게 될 것이고 시간과 비용이 낭비될 뿐만 아니라 잘못된 결론을 도출하여 피해가 발생할 수 있다.
+
+#### p.178 정리
+
+> + 소규모 표본에 대한 과장된 신뢰는 일반 착각의 한 가지 사례일 뿐이다. 우리는 메시지의 신뢰성을 알려주는 정보보다 메시지의 내용에 더 집중한다. 그러다 보니 결과적으로 데이터가 입증하는 것보다 우리 주위의 세계에 대해 더 단순하면서도 정합적인 시각을 갖고 만다. 서둘러 결론에 도달하는 건 현실보다는 상상의 세계 속에서 안전한 활동이다.
+> + 통계들은 인과관계의 설명을 요구하는 듯한 수많은 관찰결과들을 낳지만 그러한 설명에 도움을 주지는 못한다. 세상에 존재하는 많은 사실들은 표본 채집처럼 운에 의존하기 때문이다. 운 때문에 생긴 일들을 인과관계로 설명하기란 불가능하다.
+
+### Summary
+
+    새로운 CEO가 부임한 이후 스튜디오가 3편의 성공적인 영화를 찍었다. 그러나 그를 히트 제조기라고 단정하기는 시기상조이다.
+
+
+    새로운 트레이더가 낸 연속적인 좋은 결과가 우연의 산물일 가능성이 있는지를 평가할 수 있는 통계학자로부터 자문을 받기 전까지 그를 천재라고 믿지 않을 것이다
+
+
+    관찰결과의 표본이 어떤 추측을 하기에 너무 적다. 적은 숫자의 법칙을 따르지 말자.
+
+
+    나는 우리가 충분히 큰 표본을 갖기 전까지 실험 결과를 비밀로 간직할 계획이다. 그렇지 않다면 우리는 성급하게 결론을 내야 한다는 압력에 시달릴 것이다.
+
+---
